set01/problem08.errors.txt
PS C:\Users\Ramyashree\csecondsem\C_activity_sets\set01> gcc problem08.c       
problem08.c: In function 'main':
problem08.c:59:20: warning: passing argument 2 of 'input_array' makes pointer from integer without a cast [-Wint-conversion]
     input_array(n, a);
                    ^
problem08.c:32:6: note: expected 'int *' but argument is of type 'int'
 void input_array(int n, int a[n])
      ^~~~~~~~~~~
problem08.c:60:24: warning: passing argument 2 of 'sum_n_array' makes pointer from integer without a cast [-Wint-conversion]
     sum=sum_n_array(n, a);
                        ^
problem08.c:41:5: note: expected 'int *' but argument is of type 'int'
 int sum_n_array(int n, int a[n])
     ^~~~~~~~~~~
problem08.c:61:14: warning: passing argument 2 of 'output' makes pointer from integer without a cast [-Wint-conversion]    
     output(n,a,sum);
              ^
problem08.c:46:6: note: expected 'int *' but argument is of type 'int'
 void output(int n, int a[n],int sum)
      ^~~~~~
PS C:\Users\Ramyashree\csecondsem\C_activity_sets\set01> gcc problem08.c
problem08.c: In function 'main':
problem08.c:59:20: warning: passing argument 2 of 'input_array' makes pointer from integer without a cast [-Wint-conversion]
     input_array(n, a);
                    ^
problem08.c:32:6: note: expected 'int *' but argument is of type 'int'
 void input_array(int n, int a[n])
      ^~~~~~~~~~~
problem08.c:60:24: warning: passing argument 2 of 'sum_n_array' makes pointer from integer without a cast [-Wint-conversion]
     sum=sum_n_array(n, a);
                        ^
problem08.c:41:5: note: expected 'int *' but argument is of type 'int'
 int sum_n_array(int n, int a[n])
     ^~~~~~~~~~~
problem08.c:61:14: warning: passing argument 2 of 'output' makes pointer from integer without a cast [-Wint-conversion]
     output(n,a,sum);
              ^
problem08.c:46:6: note: expected 'int *' but argument is of type 'int'
 void output(int n, int a[n],int sum)
 PS C:\Users\Ramyashree\csecondsem\C_activity_sets\set01> gcc problem08.c
problem08.c: In function 'main':
problem08.c:60:9: error: conflicting types for 'a'
     int a[n];
         ^
problem08.c:58:11: note: previous declaration of 'a' was here
     int n,a,sum=0;
           ^
           PS C:\Users\Ramyashree\csecondsem\C_activity_sets\set01> gcc problem08.c
PS C:\Users\Ramyashree\csecondsem\C_activity_sets\set01> ./a.exe        
Input array size
3
Input the array:
1
2
3
The sum of 1+2+3 is 1